# RCS_SENTRY_VISION2026

./: .gitignore  README.md  SENTRY_BT_HOTFIX_PLAN.md  ost.yaml  ystemctl status robomaster.service
docs/: 99-rm-serial.rules  autoaim_v3_test.md  debugging_low_bandwidth.md  dual_lidar_safety_limiter.md  dual_lidar_test_guide.md  sentry_decision_integration.md  sentry_rule_constraints_audit.md  serial_device_binding.md  third_party_autoaim.md
livox_ros_driver2/: COLCON_IGNORE
point_lio/: CMakeLists.txt  COLCON_IGNORE  package.xml
rm_autoaim/: package.xml
rm_autoaim/config/: params.yaml
rm_autoaim/include/rm_autoaim/: autoaim_node.hpp  imm_ukf_tracker.hpp
rm_autoaim/src/: autoaim_node.cpp  imm_ukf_tracker.cpp
rm_bringup/: CMakeLists.txt  package.xml
rm_bringup/config/: initial_pose_manager.yaml  navigate_through_poses_no_spin.xml  navigate_to_pose_no_spin.xml  pb2025_xmu_nav_params.yaml  sentry_nav2_params.yaml
rm_bringup/launch/: pb2025_takeover_bringup.launch.py  pure_navigation_bringup.launch.py  sentry_bringup.launch.py  sentry_pb2025_takeover.launch.py  test_self_filter.launch.py
rm_bringup/rviz/: nav2_debug.rviz
rm_bringup/scripts/: cmd_vel_to_nav_cmd.py  fake_lidar_publisher.py  initial_pose_manager.py  obstacle_cloud_filter.py  pb_cmd_vel_to_nav_cmd.py  pcd2pgm.py
rm_bringup/src/: localization_recovery_manager_node.cpp  obstacle_cloud_filter_node.cpp  self_point_filter_node.cpp
rm_global_localization/: CMakeLists.txt  package.xml
rm_global_localization/config/: params.yaml
rm_global_localization/include/rm_global_localization/: global_localization_node.hpp
rm_global_localization/launch/: global_localization.launch.py
rm_global_localization/src/: global_localization_node.cpp
rm_hik_driver/: package.xml
rm_hik_driver/launch/: hik_camera.launch.py
rm_hik_driver/src/: hik_camera_node.cpp
rm_hw_bridge/: CMakeLists.txt  package.xml
rm_hw_bridge/include/rm_hw_bridge/: protocol.hpp  serial_port.hpp
rm_hw_bridge/src/: hw_bridge_node.cpp
rm_interfaces/: package.xml
rm_livox_driver/: CMakeLists.txt  package.xml
rm_livox_driver/config/: MID360_config.json  mid360_view.rviz
rm_livox_driver/launch/: lidar_only.launch.py  mid360_bringup.launch.py  rviz_only.launch.py  static_tf_only.launch.py
rm_point_lio/: CMakeLists.txt  package.xml
rm_point_lio/config/: mid360_point_lio.yaml  point_lio_view.rviz
rm_point_lio/launch/: lio_only.launch.py  lio_with_driver.launch.py  point_lio.launch.py
sentry_bt/: package.xml  rm2026_referee_regular_link_for_agent_v2_direction_explicit.md
small_gicp/: CMakeLists.txt
src/rm_autoaim/: CMakeLists.txt
src/rm_autoaim/config/: params.yaml
src/rm_autoaim/include/rm_autoaim/: aimer.hpp  autoaim_node.hpp  imm_ukf_tracker.hpp
src/rm_autoaim/include/rm_autoaim/core/: aim_target.hpp  armor_pose_estimator.hpp  csu_armor_tracker.hpp  manual_compensator.hpp
src/rm_autoaim/src/: autoaim_node.cpp
src/rm_autoaim/src/core/: armor_pose_estimator.cpp  csu_armor_tracker.cpp  manual_compensator.cpp
src/rm_bringup/: CMakeLists.txt  package.xml
src/rm_bringup/config/: pb2025_xmu_dual_mid360_config.json  pb2025_xmu_frames.yaml  pb2025_xmu_mid360_config.json  pb2025_xmu_nav_params.yaml  pb2025_xmu_navigate_through_poses_no_move_recovery.xml  pb2025_xmu_navigate_to_pose_no_move_recovery.xml  pb2025_xmu_second_mid360_config.json  pb2025_xmu_vehicle.yaml  sentry_match_sim.rviz
src/rm_bringup/launch/: second_livox_only.launch.py  sentry_bringup.launch.py  sentry_match_rviz_sim.launch.py  sentry_pb2025_takeover.launch.py
src/rm_bringup/scripts/: livox_custom_to_pointcloud2.py  pb_cmd_vel_to_nav_cmd.py  second_lidar_obstacle_filter.py  second_lidar_safety_limiter.py  sentry_match_nav_sim.py
src/rm_bringup/src/: second_lidar_safety_limiter_node.cpp
src/rm_hik_driver/: CMakeLists.txt
src/rm_hik_driver/config/: hik_camera_info.yaml  params.yaml
src/rm_hik_driver/include/rm_hik_driver/: hik_camera_node.hpp
src/rm_interfaces/: CMakeLists.txt
src/rm_interfaces/msg/: ArmorDetection.msg  ArmorDetections.msg  AutoaimTargetStatus.msg  GimbalCmd.msg  SentryDecisionDebug.msg  SentryIntent.msg  SentryNavStatus.msg  SentrySimInput.msg
src/rm_sentry_decision/: CMakeLists.txt  package.xml
src/rm_sentry_decision/config/: sentry_goals.yaml  sentry_mission.yaml
src/rm_sentry_decision/src/: sentry_command_mux_node.cpp  sentry_goal_executor_node.cpp  sentry_mission_runner_node.cpp
src/rm_vision/: CMakeLists.txt  package.xml
src/rm_vision/config/: params.yaml
src/rm_vision/include/rm_vision/: armor_types.hpp  yolo_detector.hpp
src/rm_vision/src/: vision_detector_node.cpp
src/sentry_bt/: CMakeLists.txt  main.cpp  package.xml  rm2026_sentry_decision_rules.md
src/sentry_bt/config/: sentry_bt_params.yaml
src/sentry_bt/include/: bt_compat.hpp  bt_node_common.hpp  bt_nodes_basic.hpp  bt_nodes_executor.hpp  bt_nodes_guard.hpp  bt_nodes_rule.hpp  bt_setup.hpp  llm_interface.hpp  nav_interface.hpp  referee_interface.hpp  robot_context.hpp  sentry_decision_protocol.h
src/sentry_bt/launch/: bench_debug.launch.py  sentry_bt.launch.py
src/sentry_bt/scenarios/: README.md  critical_hp_remote_repair.yaml  energy_activation.yaml  engage_resupply.yaml  input_loss_failsafe.yaml  match_visual_full.yaml  nav_posture_output_contract.yaml  nominal_patrol.yaml  posture_stress.yaml  revive_cycle.yaml  rfid_field_points.yaml  rule_tuning_matrix.yaml  spin_supercap_simple.yaml  v3_hotfix_supply_revival.yaml
src/sentry_bt/scripts/: sentry_bt_debug_watch
src/sentry_bt/src/: bt_nodes_basic.cpp  bt_nodes_executor.cpp  bt_nodes_guard.cpp  bt_nodes_rule.cpp  bt_nodes_tactical.cpp  bt_setup.cpp  export_tree_model_main.cpp  llm_interface.cpp  nav_interface.cpp  referee_interface.cpp  sentry_bt_scenario_runner.cpp  sentry_bt_sim_main.cpp  shooter_interface.cpp
src/sentry_bt/tree/: sentry_main.template.xml  sentry_main.xml
tools/: analyze_bag.py  fake_sensor_publisher.py  handeye_calibrate.py  handeye_capture.py  on_vehicle_test_guide.md  sentry-match-watchdog.desktop  sentry.service  sentry_watchdog_terminal.sh  (+6 more)
(+108 files in other folders)
