<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_bringup</name>
  <version>0.1.0</version>
  <description>RM Sentry 一键启动包 — 统一 Launch 所有节点</description>
  <maintainer email="rm@xmu.edu.cn">RM Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>rm_hw_bridge</exec_depend>
  <exec_depend>rm_hik_driver</exec_depend>
  <exec_depend>rm_vision</exec_depend>
  <exec_depend>rm_autoaim</exec_depend>
  <exec_depend>rm_livox_driver</exec_depend>
  <exec_depend>rm_point_lio</exec_depend>
  <exec_depend>rm_global_localization</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rm_interfaces</exec_depend>
  <exec_depend>sentry_bt</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
