<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_hik_driver</name>
  <version>0.1.0</version>
  <description>HikRobot industrial camera ROS 2 driver for RoboMaster</description>
  <maintainer email="rm@xmu.edu.cn">XMU RCS</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>