<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_hw_bridge</name>
  <version>0.1.0</version>
  <description>Hardware bridge node — serial communication with STM32 chassis MCU</description>
  <maintainer email="rm@xmu.edu.cn">XMU RCS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rm_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>