<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_livox_driver</name>
  <version>0.1.0</version>
  <description>Clean bringup wrapper for Livox MID-360 LiDAR via livox_ros_driver2.
  Enforces standardized frame_id, explicit QoS, and static TF publishing.
  No middleware pointcloud forwarding — pure driver orchestration.</description>
  <maintainer email="rm@xmu.edu.cn">XMU RCS</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies only — no C++ code in this package -->
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>