<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_vision</name>
  <version>0.1.0</version>
  <description>YOLO armor detection node for RoboMaster (OpenVINO backend)</description>
  <maintainer email="rm@xmufs.com">XMU RCS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rm_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>